work on mobile view for projects page Image issue

--- a/app/projects/page.module.scss
+++ b/app/projects/page.module.scss
@@ -18,12 +18,34 @@
 
 .sectionContainer {
   padding: 0.6rem 0rem 0.6rem 0rem;
+  position: relative;
+
+  .cardLineOnLeft {
+    height: 96%;
+    top: 2%;
+    width: 1px;
+    left: 25%;
+    &::after {
+      animation-duration: 5s;
+      animation-delay: 1.5s;
+    }
+  }
+  .cardLineOnRight {
+    height: 96%;
+    top: 2%;
+    width: 1px;
+    right: 0%;
+    &::after {
+      animation-duration: 5s;
+      animation-delay: 1.5s;
+    }
+  }
 }
 
 .projectCard {
   display: grid;
   grid-template-areas:
-    'title title'
+    'title .'
     'image description'
     'image description'
     'links links';
@@ -34,10 +56,16 @@
   padding: 1rem;
 
   .cardTitle {
+    justify-self: center;
+    border-radius: 5px;
+    background-color: var(--background-color);
     grid-area: title;
     font-size: 1.5rem;
     color: var(--text-color);
     margin-bottom: 0.5rem;
+    width: 75%;
+    padding: 0.5rem;
+    text-align: center;
   }
   .projectImageWrapper {
     grid-area: image;
@@ -46,14 +74,20 @@
     border-radius: 5px;
     margin-bottom: 0.5rem;
     padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .projectImage {
-      width: 100%;
-      // height: 100%;
+      width: 500px;
+      height: auto;
       border-radius: 5px;
     }
   }
   .textContent {
+    background-color: var(--background-color);
+    padding: 1rem;
+    border-radius: 5px;
     grid-area: description;
     color: var(--text-color);
     display: flex;
@@ -64,27 +98,37 @@
     height: 100%;
   }
   .cardLinks {
+    justify-self: center;
     grid-area: links;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 .rightSideCard {
   grid-template-areas:
-    'title title'
+    '. title'
     'description image'
     'description image'
     'links links';
+
+  .cardLinks {
+    justify-self: flex-end;
+  }
 }
 .leftSideCard {
   grid-template-areas:
-    'title title'
+    'title .'
     'image description'
     'image description'
     'links links';
+  .cardLinks {
+    justify-self: flex-start;
+  }
 }
 .sectionOne {
   box-shadow: 12px 0px 3px -11px var(--glow-color);
@@ -94,5 +138,41 @@
 .sectionTwo {
   box-shadow: -12px 0px 3px -11px var(--glow-color);
   grid-area: sectionTwo;
-  // margin-top: -25rem;
+  margin-top: -15rem;
+}
+
+@media (max-width: 768px), (max-height: 480px) {
+  .mainContent {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 3rem 1rem 0rem 1rem;
+  }
+  .sectionContainer {
+    padding: 0rem;
+    // position: auto;
+    width: 100%;
+    margin-bottom: 1rem;
+    box-shadow: none;
+  }
+  .projectCard {
+    grid-template-areas:
+      ' title title'
+      'image image'
+      'description description'
+      'links links';
+  }
+  .projectImage {
+    width: 300px;
+  }
+  .cardLineOnLeft {
+    display: none;
+  }
+  .cardLineOnRight {
+    display: none;
+  }
+
+  .sectionTwo {
+    margin-top: 3rem;
+  }
 }
